--- a/.jshintrc
+++ b/.jshintrc
@@ -1,5 +1,5 @@
 {
-    "esversion": 8,
+    "esversion": 9,
     "undef": true,
     "unused": false,
     "globals": {
@@ -9,6 +9,7 @@
       "OS": false,
       "Zotero": true,
       "Components": false,
+      "FileUtils": false,
       "Services": false
     }
   }
