add contextual menu item to open the MD note for an item in Obsidian
closes #6

--- a/.jshintrc
+++ b/.jshintrc
@@ -10,6 +10,7 @@
       "Zotero": true,
       "Components": false,
       "FileUtils": false,
+      "ZoteroPane": false,
       "Services": false
     }
   }
