--- a/.jshintrc
+++ b/.jshintrc
@@ -11,6 +11,7 @@
       "Components": false,
       "FileUtils": false,
       "ZoteroPane": false,
+      "AddonManager": false,
       "Services": false
     }
   }
