trying to fix errors in zotero-plugin-toolkit module

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -5,7 +5,8 @@
     "target": "ES2016",
     "resolveJsonModule": true,
     "strict": true,
-    "noEmit": true
+    "noEmit": true,
+    "skipLibCheck": true
   },
   "include": [
     "src",
