--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "markdb-connect",
-  "version": "0.0.25",
+  "version": "0.1.0-rc.0",
   "description": "Zotero plugin that links your Markdown database to Zotero.",
   "config": {
     "addonName": "MarkDB-Connect",
