--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "main": "src/index.ts",
   "scripts": {
     "build-dev": "cross-env NODE_ENV=development node scripts/build.mjs",
-    "build-prod": "ESLINT_USE_FLAT_CONFIG=true prettier --write . && eslint --config eslint.config.mjs --fix . && tsc --project tsconfig.json --noEmit && cross-env NODE_ENV=production node scripts/build.mjs",
+    "build-prod": "ESLINT_USE_FLAT_CONFIG=true prettier --write . && eslint --config eslint.config.mjs --fix . && tsc --project tsconfig.prod.json --noEmit && cross-env NODE_ENV=production node scripts/build.mjs",
     "build": "concurrently -c auto npm:build-prod npm:tsc",
     "tsc": "tsc --noEmit",
     "start": "node scripts/start.mjs",
@@ -48,24 +48,24 @@
     "zotero-plugin-toolkit": "^2.3.11"
   },
   "devDependencies": {
-    "@stylistic/eslint-plugin": "^1.5.0",
+    "@stylistic/eslint-plugin": "^1.5.1",
     "@stylistic/eslint-plugin-js": "^1.4.1",
     "@stylistic/eslint-plugin-ts": "^1.4.1",
     "@types/node": "^20.10.4",
-    "@typescript-eslint/eslint-plugin": "^6.13.2",
-    "@typescript-eslint/parser": "^6.13.2",
+    "@typescript-eslint/eslint-plugin": "^6.14.0",
+    "@typescript-eslint/parser": "^6.14.0",
     "chokidar-cli": "^3.0.0",
     "compressing": "^1.10.0",
     "concurrently": "^8.2.2",
     "cross-env": "^7.0.3",
-    "esbuild": "^0.19.8",
+    "esbuild": "^0.19.9",
     "eslint": "^8.55.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-import": "^2.29.0",
     "eslint-plugin-prettier": "^5.0.1",
-    "globals": "^13.23.0",
-    "prettier": "^3.1.0",
+    "globals": "^13.24.0",
+    "prettier": "^3.1.1",
     "release-it": "^17.0.1",
     "replace-in-file": "^7.0.2",
     "typescript": "^5.3.3",
