add update.rdf for zot6 installs

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "main": "src/index.ts",
   "scripts": {
     "build-dev": "cross-env NODE_ENV=development node scripts/build.mjs",
-    "build-prod": "ESLINT_USE_FLAT_CONFIG=true prettier --write . && eslint --config eslint.config.mjs --fix . && tsc --project tsconfig.prod.json --noEmit && cross-env NODE_ENV=production node scripts/build.mjs",
+    "build-prod": "export ESLINT_USE_FLAT_CONFIG=true && export NODE_ENV=production && prettier --write . && eslint --config eslint.config.mjs --fix . && tsc --project tsconfig.prod.json --noEmit && cross-env NODE_ENV=production node scripts/build.mjs",
     "build": "concurrently -c auto npm:build-prod npm:tsc",
     "tsc": "tsc --noEmit",
     "start": "node scripts/start.mjs",
@@ -27,8 +27,8 @@
     "reload": "npm run build-dev && node scripts/reload.mjs",
     "watch": "chokidar \"src/**\" \"addon/**\" -c \"npm run reload\"",
     "release": "release-it",
-    "lint": "ESLINT_USE_FLAT_CONFIG=true prettier --write . && eslint --config eslint.config.mjs --fix .",
-    "lint-dry": "ESLINT_USE_FLAT_CONFIG=true prettier --check . ; eslint --config eslint.config.mjs .",
+    "lint": "export ESLINT_USE_FLAT_CONFIG=true && export NODE_ENV=production && prettier --write . && eslint --config eslint.config.mjs --fix .",
+    "lint-dry": "export ESLINT_USE_FLAT_CONFIG=true && export NODE_ENV=production && prettier --check . ; eslint --config eslint.config.mjs .",
     "test": "echo \"Error: no test specified\" && exit 1",
     "update-deps": "npm update --save && npm update --save-dev",
     "rebuild-start": "npm run build-dev && npm run start",
