update with zotero-plugin-template v1.1.0

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,12 @@ node_modules
 dist/
 build/
 
+### Editor directories and files ###
+# .vscode/*
+# !.vscode/extensions.json
+# .idea/
+.idea/workspace.xml
+
 ### Project ###
 eslint.config.js
 zotero-cmd.json
