--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
       "publish": false
     },
     "github": {
-      "release": true,
+      "release": false,
       "assets": [
         "build/*.xpi"
       ]
