--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "lint:dry": "export ESLINT_USE_FLAT_CONFIG=true && export NODE_ENV=production && prettier --config prettier.config.mjs --check . ; eslint --config eslint.config.mjs .",
     "test": "echo \"Error: no test specified\" && exit 1",
     "release": "release-it --only-version --preReleaseId=beta",
-    "update-deps": "npm update --save && npm update --save-dev && npm outdated --depth=0",
+    "update-deps": "npm outdated --depth=0 && npm update --save && npm update --save-dev && npm outdated --depth=0",
     "postinstall": "node ./scripts/linkconfig.mjs"
   },
   "main": "src/index.ts",
@@ -34,29 +34,29 @@
   },
   "homepage": "https://github.com/daeh/zotero-markdb-connect#readme",
   "dependencies": {
-    "zotero-plugin-toolkit": "^2.3.19"
+    "zotero-plugin-toolkit": "^2.3.26"
   },
   "devDependencies": {
-    "@stylistic/eslint-plugin": "^1.6.0",
-    "@stylistic/eslint-plugin-js": "^1.4.1",
-    "@stylistic/eslint-plugin-ts": "^1.4.1",
-    "@types/node": "^20.11.16",
-    "@typescript-eslint/eslint-plugin": "^6.21.0",
-    "@typescript-eslint/parser": "^6.21.0",
-    "chokidar": "^3.5.3",
+    "@stylistic/eslint-plugin": "^1.7.0",
+    "@stylistic/eslint-plugin-js": "^1.7.0",
+    "@stylistic/eslint-plugin-ts": "^1.7.0",
+    "@types/node": "^20.11.28",
+    "@typescript-eslint/eslint-plugin": "^7.2.0",
+    "@typescript-eslint/parser": "^7.2.0",
+    "chokidar": "^3.6.0",
     "compressing": "^1.10.0",
-    "esbuild": "^0.20.0",
-    "eslint": "^8.56.0",
+    "esbuild": "^0.20.2",
+    "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-prettier": "^5.1.3",
-    "globals": "^13.24.0",
+    "globals": "^14.0.0",
     "prettier": "^3.2.5",
-    "release-it": "^17.0.3",
+    "release-it": "^17.1.1",
     "replace-in-file": "^7.1.0",
-    "typescript": "^5.3.3",
-    "zotero-types": "^1.3.18"
+    "typescript": "^5.4.2",
+    "zotero-types": "^1.3.20"
   },
   "release-it": {
     "git": {
