update template to v2.0.1 fix double encoding of file logseq filenames

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -1,17 +1,11 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "extends": [
-    "config:recommended",
-    ":semanticPrefixChore",
-    ":prHourlyLimitNone",
-    ":prConcurrentLimitNone",
-    ":enableVulnerabilityAlerts",
-    ":dependencyDashboard",
-    "schedule:weekends"
-  ],
+  "extends": ["config:recommended", ":semanticPrefixChore", ":prHourlyLimitNone", ":prConcurrentLimitNone", ":enableVulnerabilityAlerts", ":dependencyDashboard", "group:allNonMajor", "schedule:weekly"],
+  "labels": ["dependencies"],
   "packageRules": [
     {
-      "matchPackageNames": ["zotero-plugin-toolkit", "zotero-types"],
+      "matchPackageNames": ["zotero-plugin-toolkit", "zotero-types", "zotero-plugin-scaffold"],
+      "schedule": ["at any time"],
       "automerge": true
     }
   ],
