--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "markdb-connect",
-  "version": "0.1.0",
+  "version": "0.1.1-beta.1",
   "description": "Zotero plugin that links your Markdown database to Zotero.",
   "author": "Dae Houlihan <dev@daeh.info> (https://daeh.info)",
   "license": "MIT",
@@ -10,21 +10,8 @@
     "addonRef": "mdbc",
     "addonInstance": "MDBC",
     "prefsPrefix": "extensions.zotero.mdbc",
-    "releasePage": "https://github.com/daeh/zotero-markdb-connect/releases",
     "updateJSON": "https://raw.githubusercontent.com/daeh/zotero-markdb-connect/main/update.json"
   },
-  "scripts": {
-    "start": "node scripts/server.mjs",
-    "build": "tsc --noEmit && node scripts/build.mjs production",
-    "stop": "node scripts/stop.mjs",
-    "lint": "export ESLINT_USE_FLAT_CONFIG=true && export NODE_ENV=production && prettier --config prettier.config.mjs --write . && eslint --config eslint.config.mjs --fix .",
-    "lint:dry": "export ESLINT_USE_FLAT_CONFIG=true && export NODE_ENV=production && prettier --config prettier.config.mjs --check . ; eslint --config eslint.config.mjs .",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "release": "release-it --only-version --preReleaseId=beta",
-    "update-deps": "npm outdated --depth=0 && npm update --save && npm update --save-dev && npm outdated --depth=0",
-    "postinstall": "node ./scripts/linkconfig.mjs"
-  },
-  "main": "src/index.ts",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/daeh/zotero-markdb-connect.git"
@@ -33,53 +20,30 @@
     "url": "https://github.com/daeh/zotero-markdb-connect/issues"
   },
   "homepage": "https://github.com/daeh/zotero-markdb-connect#readme",
+  "scripts": {
+    "start": "zotero-plugin serve",
+    "build": "tsc --noEmit && zotero-plugin build",
+    "lint": "export ESLINT_USE_FLAT_CONFIG=true && export NODE_ENV=production && prettier --config prettier.config.mjs --write . && eslint --config eslint.config.mjs --fix .",
+    "release": "zotero-plugin release",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "update-deps": "npm update --save"
+  },
   "dependencies": {
-    "zotero-plugin-toolkit": "^2.3.28"
+    "zotero-plugin-toolkit": "^2.3.35"
   },
   "devDependencies": {
-    "@stylistic/eslint-plugin": "^1.7.0",
-    "@stylistic/eslint-plugin-js": "^1.7.0",
-    "@stylistic/eslint-plugin-ts": "^1.7.0",
-    "@types/node": "^20.11.30",
-    "@typescript-eslint/eslint-plugin": "^7.4.0",
-    "@typescript-eslint/parser": "^7.4.0",
-    "chokidar": "^3.6.0",
-    "compressing": "^1.10.0",
-    "esbuild": "^0.20.2",
+    "@stylistic/eslint-plugin": "^2.2.2",
+    "@types/node": "^20.14.8",
+    "@typescript-eslint/eslint-plugin": "^7.14.1",
+    "@typescript-eslint/parser": "^7.14.1",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-import-x": "^0.5.2",
     "eslint-plugin-prettier": "^5.1.3",
-    "globals": "^15.0.0",
-    "prettier": "^3.2.5",
-    "release-it": "^17.1.1",
-    "replace-in-file": "^7.1.0",
-    "typescript": "^5.4.3",
-    "zotero-types": "^1.3.20"
-  },
-  "release-it": {
-    "git": {
-      "tagName": "v${version}"
-    },
-    "npm": {
-      "publish": false
-    },
-    "github": {
-      "release": true,
-      "assets": [
-        "build/*.xpi"
-      ],
-      "comments": {
-        "submit": true,
-        "issue": ":rocket: _This issue has been resolved in v${version}. See [${releaseName}](${releaseUrl}) for release notes._",
-        "pr": ":rocket: _This pull request is included in v${version}. See [${releaseName}](${releaseUrl}) for release notes._"
-      }
-    },
-    "hooks": {
-      "before:init": "npm run lint",
-      "after:bump": "npm run build",
-      "after:release": "echo Successfully released ${name} v${version} to ${repo.repository}."
-    }
+    "prettier": "^3.3.2",
+    "typescript": "^5.5.2",
+    "zotero-plugin-scaffold": "^0.0.31",
+    "zotero-types": "^2.0.2"
   }
 }
