--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "markdb-connect",
-  "version": "0.1.1-beta.2",
+  "version": "0.1.1",
   "description": "Zotero plugin that links your Markdown database to Zotero.",
   "author": "Dae Houlihan <dev@daeh.info> (https://daeh.info)",
   "license": "MIT",
