refactor and update recursive file search

--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,8 @@ yarn.lock
 .DS_Store
 
 ### Editor directories and files ###
-.idea/
+.vscode/
+# .idea/
 
 ### Generated files ###
-eslint.config.js
+
