--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -30,5 +30,5 @@
     "forceConsistentCasingInFileNames": true
   },
   "include": ["src", "typing", "node_modules/zotero-types"],
-  "exclude": ["build", "addon"]
+  "exclude": ["build", "addon", "**/*-lintignore*", "**/*_lintignore*"]
 }
