--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -29,6 +29,6 @@
     "noFallthroughCasesInSwitch": true,
     "forceConsistentCasingInFileNames": true
   },
-  "include": ["src", "typing", "node_modules/zotero-types"],
+  "include": ["src", "typings", "node_modules/zotero-types"],
   "exclude": ["build", "addon", "**/*-lintignore*", "**/*_lintignore*"]
 }
