--- a/tsconfig.repo.json
+++ b/tsconfig.repo.json
@@ -6,6 +6,6 @@
     "allowJs": true,
     "checkJs": true
   },
-  "include": ["src", "typing", "node_modules/zotero-types", "./*.ts", "./*.mjs", "./*.js", ".release-it.ts"],
+  "include": ["src", "typings", "node_modules/zotero-types", "./*.ts", "./*.mjs", "./*.js", ".release-it.ts"],
   "exclude": ["build", "addon"]
 }
