Solve boolean pref issue

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -1,10 +1,23 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "extends": ["config:recommended", ":semanticPrefixChore", ":prHourlyLimitNone", ":prConcurrentLimitNone", ":enableVulnerabilityAlerts", ":dependencyDashboard", "group:allNonMajor", "schedule:weekly"],
+  "extends": [
+    "config:recommended",
+    ":semanticPrefixChore",
+    ":prHourlyLimitNone",
+    ":prConcurrentLimitNone",
+    ":enableVulnerabilityAlerts",
+    ":dependencyDashboard",
+    "group:allNonMajor",
+    "schedule:weekly"
+  ],
   "labels": ["dependencies"],
   "packageRules": [
     {
-      "matchPackageNames": ["zotero-plugin-toolkit", "zotero-types", "zotero-plugin-scaffold"],
+      "matchPackageNames": [
+        "zotero-plugin-toolkit",
+        "zotero-types",
+        "zotero-plugin-scaffold"
+      ],
       "schedule": ["at any time"],
       "automerge": true
     }
