--- a/addon/manifest.json
+++ b/addon/manifest.json
@@ -6,15 +6,15 @@
   "homepage_url": "__homepage__",
   "author": "__author__",
   "icons": {
-    "48": "chrome/content/icons/favicon@0.5x.png",
-    "96": "chrome/content/icons/favicon.png"
+    "48": "content/icons/favicon@0.5x.png",
+    "96": "content/icons/favicon.png"
   },
   "applications": {
     "zotero": {
       "id": "__addonID__",
       "update_url": "__updateURL__",
       "strict_min_version": "6.999",
-      "strict_max_version": "7.1.*"
+      "strict_max_version": "7.*"
     }
   }
 }
