--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Zotero plugin that links your Markdown database to Zotero.",
   "author": "Dae Houlihan <dev@daeh.info> (https://daeh.info)",
   "license": "MIT",
+  "type": "module",
   "config": {
     "addonName": "MarkDB-Connect",
     "addonID": "daeda@mit.edu",
@@ -22,31 +23,30 @@
   "homepage": "https://github.com/daeh/zotero-markdb-connect#readme",
   "scripts": {
     "start": "zotero-plugin serve",
-    "build": "tsc --noEmit && zotero-plugin build",
+    "build": "zotero-plugin build && tsc --noEmit",
     "lint": "export ESLINT_USE_FLAT_CONFIG=true && export NODE_ENV=production && prettier --config prettier.config.mjs --write . && eslint --config eslint.config.mjs --fix .",
     "lint:repo": "export ESLINT_USE_FLAT_CONFIG=true && export NODE_ENV=repo && prettier --config prettier.config.mjs --write . && eslint --config eslint.config.mjs --fix .",
+    "update-deps": "npm outdated --depth=0; npm update --save; npm update --save-dev; npm outdated --depth=0",
     "release": "zotero-plugin release",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "update-deps": "npm outdated --depth=0; npm update --save; npm update --save-dev; npm outdated --depth=0"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "zotero-plugin-toolkit": "^4.1.1"
+    "zotero-plugin-toolkit": "^5.0.0-0"
   },
   "devDependencies": {
-    "@stylistic/eslint-plugin": "^3.0.0",
-    "@types/node": "^22.12.0",
-    "@typescript-eslint/eslint-plugin": "^8.22.0",
-    "@typescript-eslint/parser": "^8.22.0",
-    "eslint": "^9.19.0",
-    "eslint-config-prettier": "^10.0.1",
-    "eslint-import-resolver-typescript": "^3.7.0",
+    "@stylistic/eslint-plugin": "^4.2.0",
+    "@types/node": "^22.14.0",
+    "@typescript-eslint/eslint-plugin": "^8.29.0",
+    "@typescript-eslint/parser": "^8.29.0",
+    "eslint": "^9.24.0",
+    "eslint-config-prettier": "^10.1.1",
+    "eslint-import-resolver-typescript": "^4.3.1",
     "eslint-plugin-import": "^2.31.0",
-    "eslint-plugin-prettier": "^5.2.3",
-    "globals": "^15.14.0",
-    "prettier": "^3.4.2",
-    "typescript": "^5.7.3",
-    "zotero-plugin-scaffold": "^0.2.0",
-    "zotero-types": "^3.1.6"
-  },
-  "packageManager": "yarn@1.22.19+sha1.4ba7fc5c6e704fce2066ecbfb0b0d8976fe62447"
+    "eslint-plugin-prettier": "^5.2.6",
+    "prettier": "^3.5.3",
+    "typescript": "^5.8.3",
+    "typescript-eslint": "^8.29.0",
+    "zotero-plugin-scaffold": "^0.4.1",
+    "zotero-types": "^4.0.0-beta.3"
+  }
 }
