--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "markdb-connect",
-  "version": "0.1.7",
+  "version": "0.1.8",
   "description": "Zotero plugin that links your Markdown database to Zotero.",
   "author": "Dae Houlihan <dev@daeh.info> (https://daeh.info)",
   "license": "MIT",
@@ -32,22 +32,22 @@
   },
   "dependencies": {
     "tslib": "^2.8.1",
-    "zotero-plugin-toolkit": "^5.0.1"
+    "zotero-plugin-toolkit": "^5.1.0-beta.13"
   },
   "devDependencies": {
-    "@stylistic/eslint-plugin": "^5.3.1",
-    "@types/node": "^24.5.0",
+    "@stylistic/eslint-plugin": "^5.7.1",
+    "@types/node": "^25.1.0",
     "@typescript-eslint/eslint-plugin": "^8.29.0",
     "@typescript-eslint/parser": "^8.29.0",
-    "eslint": "^9.35.0",
+    "eslint": "^9.39.2",
     "eslint-config-prettier": "^10.1.8",
     "eslint-import-resolver-typescript": "^4.4.4",
     "eslint-plugin-import": "^2.32.0",
-    "eslint-plugin-prettier": "^5.5.4",
-    "prettier": "^3.6.2",
-    "typescript": "^5.9.2",
-    "typescript-eslint": "^8.44.0",
-    "zotero-plugin-scaffold": "^0.8.0",
-    "zotero-types": "^4.0.5"
+    "eslint-plugin-prettier": "^5.5.5",
+    "prettier": "^3.8.1",
+    "typescript": "^5.9.3",
+    "typescript-eslint": "^8.54.0",
+    "zotero-plugin-scaffold": "^0.8.2",
+    "zotero-types": "^4.1.0-beta.4"
   }
 }
